middleware + create secret
